syntax = "proto3";

//option java_multiple_files = true;
option java_package = "com.yuqi.praft";
option java_outer_classname = "RegisterAndHeartBeatProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;


message NodeRegisterRequest {
  //todo, we can register table/partition message
  string hostname = 1;
  int32 port = 2;
}

message NodeRegisterReponse {
  int32 code = 1;
}

service RegisterAndHeartBeatService {
  rpc registerNodeInfo(NodeRegisterRequest)
      returns(NodeRegisterReponse);
}
